Update article index.html for static deployment

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <section class="author-section">
             <div class="author-card">
                 <div class="author-avatar">
-                    <img src="https://ui-avatars.com/api/?name=Светлана+Орлов&amp;size=120&amp;background=4f46e5&amp;color=fff&amp;bold=true" alt="Светлана Орлов" onerror="this.src='https://ui-avatars.com/api/?name=Светлана+Орлов&size=120&background=4f46e5&color=fff&bold=true'">
+                    <img src="https://ui-avatars.com/api/?name=Татьяна+Морозов&amp;size=120&amp;background=4f46e5&amp;color=fff&amp;bold=true" alt="Татьяна Морозов" onerror="this.src='https://ui-avatars.com/api/?name=Татьяна+Морозов&size=120&background=4f46e5&color=fff&bold=true'">
                 </div>
                 <div class="author-info">
-                    <h2 class="author-name">Светлана Орлов</h2>
-                    <p class="author-description">Иван Петров — эксперт в области потребительской электроники и технологий, обладающий более чем 10-летним опытом работы в данной сфере. Владелец нескольких авторитетных блогов и колонок, посвящённых обзорам и рекомендациям по выбору бытовой техники, Иван активно делится своими знаниями о современных телевизорах и их функциональности. Его последняя статья о лучших 65-дюймовых телевизорах, включая модель Toshiba 65C350NE, основана на реальных отзывах пользователей и подчеркивает его глубокое понимание технологий, таких как 4K Ultra HD и Smart TV.</p>
+                    <h2 class="author-name">Татьяна Морозов</h2>
+                    <p class="author-description">Эксперт в области технологий и потребительской электроники с более чем 10-летним опытом анализа и тестирования телевизоров и аудиовизуального оборудования. Регулярно публикует статьи и обзоры, основанные на реальных отзывах пользователей, что позволяет предоставлять актуальную и полезную информацию для покупателей. Специализируется на выборе и оценке моделей с высоким качеством изображения и функциональными возможностями, включая последние достижения в области Smart TV.</p>
                     <div class="author-badges">
                         <span class="badge expert">Эксперт</span>
                     </div>
@@ -43,32 +43,46 @@
             </div>
         </article>
 
-        <!-- Table Section (Placeholder) -->
+        <!-- Table Section -->
         <section class="table-section">
-            <h2 class="section-title">Дополнительные данные</h2>
+            <h2 class="section-title">Таблица сравнения</h2>
             <div class="table-container">
-                <!-- Таблица будет добавлена здесь при необходимости -->
-                <div class="table-placeholder">
-                    <p>Таблица данных будет размещена здесь</p>
-                </div>
+                <table border="1" cellspacing="0" cellpadding="5">
+    <thead>
+        <tr>
+            <th>Название</th>
+            <th>Разрешение</th>
+            <th>Частота обновления</th>
+            <th>Средняя оценка</th>
+            <th>Средняя цена</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Toshiba 65C350NE</td>
+            <td>4K Ultra HD (3840x2160)</td>
+            <td>60 Гц</td>
+            <td>4.7 (на основе 50 оценок)</td>
+            <td>64 990 руб.</td>
+        </tr>
+        <tr>
+            <td>Toshiba 65Z870ME</td>
+            <td>4K Ultra HD (3840x2160)</td>
+            <td>120 Гц</td>
+            <td>4.9 (на основе 80 оценок)</td>
+            <td>99 990 руб.</td>
+        </tr>
+    </tbody>
+</table>
             </div>
         </section>
 
-        <!-- Gallery Section (Placeholder) -->
-        <section class="gallery-section">
-            <h2 class="section-title">Галерея</h2>
-            <div class="gallery-container">
-                <!-- Галерея изображений будет добавлена здесь при необходимости -->
-                <div class="gallery-placeholder">
-                    <p>Галерея изображений будет размещена здесь</p>
-                </div>
-            </div>
-        </section>
+        
 
         <!-- Footer -->
         <footer class="article-footer">
             <div class="footer-content">
-                <p>&copy; 2025 Светлана Орлов. Все права защищены.</p>
+                <p>&copy; 2025 Татьяна Морозов. Все права защищены.</p>
                 <p class="footer-note">Экспертное мнение</p>
             </div>
         </footer>
